tests/errors/test_20.xpp
// Cannot mutate constant variable

fn main() void {
    let x = 21;
    x = 22;
	++x;
	x++;
    let mut y = x;
    y = y + 1;

    let mut z = 21;
    let z_ref = &z;
    ++z_ref;
}
